Geo fencing for attendance functionality added